Release 23.12.0 Rev. 0